# ROS2_TFG

./: .gitignore  Memoria.md  README.md
microros_files/dht11_publisher/: app.c
microros_files/window_node/: app.c
src/custom_node_message/: CMakeLists.txt  package.xml
src/custom_node_message/msg/: StatusNode.msg
src/my_tfg_bringup/: CMakeLists.txt  package.xml
src/my_tfg_bringup/launch/: my_tfg.launch.py
src/my_tfg_interfaces/: CMakeLists.txt  package.xml
src/my_tfg_interfaces/msg/: Sensor.msg  SensorArray.msg  StatusNode.msg
src/my_tfg_interfaces/srv/: SensorArea.srv
src/my_tfg_pkg/: package.xml  setup.cfg  setup.py
src/my_tfg_pkg/my_tfg_pkg/: controller_node.py  firebase_service.py  heater_node.py  irradiance_publisher.py  sensor_node.py  sqlite_service.py  temp_hum_publisher.py  window_node.py
