<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_tfg_pkg</name>
  <version>0.0.1</version>
  <description>Sistema de comunicacion e interaccion de robots en la agricultura o en la industria</description>
  <maintainer email="pedroparrilla@pm.me">pparrilla</maintainer>
  <license>Licencia Pública General de GNU (GNU GPL)</license>

  <depend>rclpy</depend>
  <depend>my_tfg_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
